# tank

./: README.md
kernel/: build-kernel.sh  raspbian-kernel-config  raspbian-kernel-config-less-stripped
schematics/: Tank.fzz
server/: .gitignore  CMakeLists.txt  README.md
server/cmake/: CompileFlags.cmake  Dependencies.cmake  Toolchain-rpi.cmake
server/scripts/: build.sh  clean.sh  config-host.sh  config-raspi.sh  generate_graph_images.sh
server/src/: CMakeLists.txt
server/src/protos/: CMakeLists.txt  Protocompiler.cmake  Services.proto
server/src/server/: Server.cpp
tank-scripts/: README.md  add-to-autostart.sh  install-proxy.sh  prerequisites.sh  run-proxy.sh  run-server.sh  run-webapp.sh  start.sh
webapp/: .gitignore  README.md  package.json
webapp/src/: ServicesServiceClientPb.ts  Services_grpc_web_pb.js  Services_pb.d.ts  Services_pb.js  app.ts  index.html
